--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "php": "^7.0.0",
         "ext-v8js": "*",
         "phpv8/v8js-stubs": "^1.3",
-        "twig/twig": "^2.1"
+        "twig/twig": "^2.1",
+        "mindplay/benchpress": "dev-master"
     }
 }
